authen-author-istio/author/pa-default.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  labels:
  name: pa-default
  namespace: default
spec:
  mtls:
    mode: STRICT
