authen-author-istio/author/se-fleetman-webapp.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: httpbin-fleetman-webapp
spec:
  hosts:
  - fleetman-webapp.nimtechnology.com
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_INTERNAL
