authen-author-istio/author/author-ingress-gateway-attribute.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: author-ingress-gateway-attribute
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: DENY
  rules:
  - to:
      - operation:
          paths: ["/get"]
          hosts: ["fleetman-webapp.nimtechnology.com"]
    when:
      - key: request.headers[x-token]
        notValues: ["admin"]
