authen-author-istio/author/author-ingress-gateway.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: author-ingress-gateway
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/default/sa/busybox-sa-1"]
        namespaces: ["default"]
    to:
    - operation:
        methods: ["GET"]
        paths: ["/get"]
